# ParallelLife

./: .gitignore  CMakeLists.txt  README.md
src/: Makefile  field.c  field.h  life.c  life.h  main.c  mylib.c  mylib.h  runner.c  runner.h  shm_malloc.c  shm_malloc.h
